# FormStruct-Bench

./: .env.example  .gitignore  Metrics_README.md  README.md  README_API_LLM_AUXILIARY_RESULTS.md  README_AUXILIARY_EXPERIMENTS.md  pyproject.toml  requirements-analysis.txt  requirements-dev.txt  requirements-inference.txt  requirements.txt
benchmark_stats/: README.md  __init__.py  run_hierarchical_structure_stats.py  run_instance_level_data_stats.py  run_latest_four_level_difficulty_stats.py  run_representativeness_analysis.py  run_template_language_stats.py  run_template_split_difficulty_stats.py  run_title_domain_stats.py
config/: difficulty_main_v0_4_normalization.json  ds_config.json  lora_config.json  template_selection_fields_70.csv  train_config.smoke.yaml  train_config.yaml
configs/: bbox_coordinate_spaces.json  main_experiment.full.example.yaml  main_experiment.yaml  qwen35_formtsr_merged_test.yaml  qwen36_base_hierarchical_v2_test.yaml  qwen36_base_vllm_full_test.yaml  qwen36_formtsr_hierarchical_v2_lora_smoke.yaml  qwen36_formtsr_hierarchical_v2_lora_test.yaml  qwen36_formtsr_merged_test.yaml  qwen37max_smoke_test.yaml  sft_transfer_figure.yaml  srfund_checkpoint_sweep_dev.yaml  srfund_formstruct_aligned_benchmark.yaml  srfund_locked400_qwen36_step100.yaml  srfund_qwen_transfer_benchmark.yaml
formtsr_exp/: README_CONTROLLED_DIAGNOSTIC_VALIDATION_STUDENT_GUIDE.md  README_FormTSR_main_exp.md  README_HIERARCHICAL_METRICS.md  README_HIERARCHICAL_METRICS_STUDENT_GUIDE.md  __init__.py  adapters.py  align_predictions.py  build_index.py  build_robustness_index.py  (+30 more)
(+78 files in other folders)
